# control-center

./: .actionlint.yml  .cursorrules  .env.example  .envrc  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .mise.toml  .npmrc  .pre-commit-config.yaml  .yamllint  AGENTS.md  AGENT_FIXES_SUMMARY.md  AGENT_HANDOFF.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CI_RELEASE_FIX_SUMMARY.md  CLAUDE.md  CLAUDE.md.bak  COMPLETE.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  COVERAGE.md  DOCKER-HUB-MIGRATION.md  DOCKERFILE_REFACTOR_COMPLETE.md  Dockerfile  ECOSYSTEM.md  ECOSYSTEM.toml  FINAL_STATUS.md  FIX-SUMMARY.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MISSION_COMPLETE.md  Makefile  NEXT_AGENT_HANDOFF.md  README.md  (+32 more)
.amazonq/rules/: aws-security.md  jbcom-control-center.md
.codex/rules/: ruler_codex_instructions.md  ruler_codex_instructions.md.bak
.copilot/agents/: ci-deployer.agent.md  jbcom-ecosystem-manager.agent.md
.copilot/instructions/: jbcom-python-libraries.instructions.md
.copilot/prompts/: jbcom-inventory.prompt.md
.crew/: README.md
.crew/config/: agents.yaml  tasks.yaml
.cursor/: .gitignore  ARCHITECTURE-CORRECTED.md  DEPENDENCY_MANAGEMENT.md  DOCKERFILE_ANALYSIS.md  Dockerfile  ENVIRONMENT_ANALYSIS.md  EVALUATION_SUMMARY.md  LESSON-TRAINING-DATA-OUTDATED.md  MCP-PROXY-BRIDGE-STRATEGY.md  MCP_CONFIGURATION_GUIDE.md  MISE_MIGRATION.md  README.md  TOOLS_REFERENCE.md  handoff_bc-36f4d928-c988-4ca2-b266-5074a3626aa7.json  mcp.json  process-compose.yml
.cursor/agents/: FLEET_COORDINATION.md  ci-deployer.md  ci-stabilization-session.md  cursor-environment-triage.md  dependency-coordinator.md  game-dev.md  jbcom-ecosystem-manager.md  release-coordinator.md  vendor-connectors-consolidator.md
.cursor/memory-bank/: README.md  activeContext.md  agenticRules.md  progress.md
.cursor/recovery/: bc-e8225222-report.md
.cursor/rules/: 00-loader.mdc  00-wiki.mdc  01-recovery-tooling.mdc  (+11 more)
.github/: AGENT_QUICK_REFERENCE.md  CODEOWNERS  WORKFLOW_CONSOLIDATION.md  copilot-instructions.md  dependabot.yml  enterprise-config.json  org-context.json  org-registry.json  pull_request_template.md  repo-context.json  repo-standards.yml  settings.yml  sync-always.yml  sync-initial.yml  sync.yml
.ruler/: AGENTS.md  README.md  agent-self-sufficiency.md  copilot.md  cursor.md  ecosystem.md  environment-setup.md  fleet-coordination.md  ruler.toml
branch-rulesets/: Main.json  PRs.json
cursor-rules/: Dockerfile  README.md  agentic.config.json
docs/: AGENT-HANDOFF-PROTOCOL.md  AGENT-TO-AGENT-HANDOFF.md  AGENTIC-CREW-DRAFT.md  AGENTIC-DIFF-RECOVERY.md  AGENTIC-ORCHESTRATION.md  ARCHITECTURE.md  CONTROL-CENTER-ISSUES.md  COUNTERPARTY-COORDINATION.md  DOMAIN-STANDARD.md  ECOSYSTEM.md  ENVIRONMENT_VARIABLES.md  FLEET-MANAGEMENT-PROTOCOL.md  FSC-COUNTERPARTY-COORDINATION.md  FSC-FLEET-COORDINATION.md  FSC-INFRASTRUCTURE.md  GAME-DEV-ECOSYSTEM-INTEGRATION.md  IMPLEMENTATION-SUMMARY.md  JBCOM-COUNTERPARTY-AWARENESS.md  JBCOM-ECOSYSTEM-INTEGRATION.md  JBCOM-FLEET-INTEGRATION.md  JULES_SUPERVISOR_PATTERN.md  MANAGEMENT.md  MCP_PROXY_SETUP.md  MIGRATION.md  MONOREPO-ARCHITECTURE.md  MULTI-AI-REVIEW.md  NO-SYMLINKS-POLICY.md  OLLAMA_CLOUD_PR_REVIEW.md  OSS-MIGRATION-CLOSEOUT.md  OSS-REPO-SYNC-CLEANUP.md  PR-OWNERSHIP-PROTOCOL.md  PUBLIC-OSS-ECOSYSTEM-EVALUATION.md  QUICK-UNLOCK-GUIDE.md  RELEASE-PROCESS.md  ROADMAP.md  SELF-ASSESSMENT-GAP-ANALYSIS.md  SETTINGS-MIGRATION-COMPLETE.md  STARTER-WORKFLOWS.md  SYNC-ARCHITECTURE.md  SYNC-FILE-VERSIONING.md  (+18 more)
ecosystem/: ECOSYSTEM_MANIFEST.yaml  ECOSYSTEM_STATE.json
enterprise/: settings.json
memory-bank/: ECOSYSTEM-SESSION-2025-12-24.md  Grok-Ollama_Cloud_Code_Review_GitHub.md  OSS-MIGRATION-ASSESSMENT.md  PR-752-COMPLETION-SUMMARY.md  README.md  activeContext.md  agent-375d2d54-report.md  agent-fcfe779a-report.md  agenticRules.md  epic-340-progress.md  epic-351-status.md  issue-395-investigation.md  issue-505-dashboard-update.md  jules-session-tracking-2024-07-26.md  progress.md  public-oss-migration-chat.md
migration-data/: ecosystem_full.json  roadmap_full.json
schemas/: repo-config.schema.json
scripts/: apply-bootstrap-fix.sh  check-symlinks  check-workflow-consistency  cleanup-symlinks  cleanup-sync-repos  configure-repos  create-repos  cursor-jules-orchestrator.mjs  ecosystem  ecosystem-curator.mjs  ecosystem-harvester.mjs  ecosystem-sage.mjs  export-control-center-issues.sh  fleet-manager.sh  import-repositories.sh  manage-dependency-prs  migrate-to-jbcom  org-apps.mjs  org-infrastructure.mjs  process-kill-list  replay_agent_session.py  sync-files  sync-project-items  sync-projects  sync-secrets  test-cursor-api.mjs  test-generate-blocks.sh  unlock-tfc-workspaces.sh  validate-agents.sh  validate-config  validate-terragrunt-generate-blocks.sh  version-sync-file
sync-templates/: agentic.config.json
terraform/: .gitignore  README.md  imports.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform-stacks/: README.md  components.tfcomponent.hcl  deployments.tfdeploy.hcl  outputs.tfcomponent.hcl  providers.tfcomponent.hcl  variables.tfcomponent.hcl
terragrunt-stacks/: terragrunt.hcl
tests/: test_default.py
tools/: configure_public_repos.sh  deploy_workflows.py  mcp_client.py  start-mcp-proxy.sh  validate_agentic_docs.py  validate_ecosystem_state.py  validate_workflows.py
wiki/: Active-Context.md  Active-Cycle.md  Agent-Instructions-Claude.md  Agentic-Rules-Overview.md  Agentic-Rules-PR-Ownership.md  Agentic-Rules-Python-Standards.md  Architecture.md  Claude.md  Copilot.md  Core-Guidelines.md  Diff-Recovery.md  Documentation-Architecture.md  Documentation-Cursor-Management.md  Documentation-MCP-Proxy-Setup.md  Documentation-MCP-Setup.md  Ecosystem.md  Environment-Setup.md  FSC-Control-Center.md  Home.md  MCP-Proxy-Strategy.md  Memory-Bank-Active-Context.md  Multi-AI-Review.md  PR-Ownership.md  Progress.md  Python-Standards.md  README.md  Recovery-Replay.md  Self-Sufficiency.md  _Footer.md  _Sidebar.md
workflows/: README.md  hub-validation.yml
(+3233 files in other folders)
