[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "project_name"
version = "0.0.1"
description = ""
authors = ["Jon Bogaty <jon@jonbogaty.com>",]
maintainers = ["Jon Bogaty <jon@jonbogaty.com>",]
packages = [{include = "project_name"}]

include = ["CHANGELOG.md", "LICENSE", "py.typed",]
license = "MIT"
readme = "README.md"

homepage = "https://pypi.org/project/project-name/"
repository = "https://github.com/jbcom/project-name"
documentation = "https://github.com/jbcom/project-name/tree/main/docs"

keywords = [
    "python3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.urls]
"Tracker" = "https://github.com/jbcom/project-name/issues"
"Changelog" = "https://github.com/jbcom/project-name/blob/main/CHANGELOG.md"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
autoimport = "^1.6.1"
isort = "^6.0.1"
coverage = {extras = ["toml"], version = "^7.9.1"}
flake8 = "^7.3.0"
flake8-bugbear = "^24.12.12"
mypy = "^1.16.1"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
skip_gitignore = "true"
line_length = 88
profile = "black"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
