[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# UV Workspace - manages all packages in packages/
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
extended-data-types = { workspace = true }
lifecyclelogging = { workspace = true }
directed-inputs-class = { workspace = true }
vendor-connectors = { workspace = true }

[project]
name = "jbcom-control-center"
version = "0.0.0"
description = "Control center for jbcom Python ecosystem"
authors = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
maintainers = [
    { name = "Jon Bogaty", email = "jon@jonbogaty.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]
keywords = [
    "python",
    "template",
    "library",
    "calver",
    "automation",
]
dependencies = [
    # Your dependencies here
]

[project.optional-dependencies]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]
typing = [
    "mypy>=1.8.0",
    "pyright>=1.1.350",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0.0",
]
dev = [
    "jbcom-control-center[tests,typing,docs]",
    "pre-commit>=3.6.0",
    "ruff>=0.8.0",
    "pycalver>=202010.0",
    "nox>=2024.4.15",
]

[project.urls]
Homepage = "https://github.com/jbcom/python-library-template"
Repository = "https://github.com/jbcom/python-library-template"
Documentation = "https://github.com/jbcom/python-library-template/tree/main/docs"
Tracker = "https://github.com/jbcom/python-library-template/issues"
Changelog = "https://github.com/jbcom/python-library-template/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/example_package"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle
    "T201",   # print statements
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "S",      # flake8-bandit
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
# CI scripts can use print, skip docstrings, etc.
".github/scripts/*.py" = ["T201", "D103", "EM101", "PTH123", "EXE001", "S603", "S607"]
# Tests can use asserts, skip docstrings
"tests/*.py" = ["D103", "S101", "D100", "D104"]
# Nox files can skip docstrings
"noxfile.py" = ["D100", "D103"]
# Management tools can use print, skip docstrings
"tools/*.py" = ["T201", "D103", "S603", "S607"]
# vendor-connectors: Python 3.9 compat, minimal docstring requirements, relaxed security for connectors
"packages/vendor-connectors/**/*.py" = [
    "UP006", "UP007", "UP035", "UP045",  # Python 3.9 compat (Optional, Dict, List, etc.)
    "D",      # Skip docstring requirements during refactor
    "S",      # Skip security checks for credential handling patterns
    "B008",   # Function calls in defaults
    "C901",   # Complexity
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pyright configuration
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

# PyCalVer - workspace-level versioning for all packages
[pycalver]
current_version = "v202511.0001"
version_pattern = "{pycalver}"
commit = false
tag = false
push = false

[pycalver.file_patterns]
"pyproject.toml" = [
    'current_version = "{pycalver}"',
]
"packages/extended-data-types/src/extended_data_types/__init__.py" = [
    '__version__ = "{pep440_pycalver}"',
]
"packages/lifecyclelogging/src/lifecyclelogging/__init__.py" = [
    '__version__ = "{pep440_pycalver}"',
]
"packages/directed-inputs-class/src/directed_inputs_class/__init__.py" = [
    '__version__ = "{pep440_pycalver}"',
]
"packages/vendor-connectors/src/vendor_connectors/__init__.py" = [
    '__version__ = "{pep440_pycalver}"',
]
